# flutter_native_zip

./: CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_zip_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  test_zip.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: native_zip.podspec
lib/: exception.dart  native_zip.dart  native_zip_bindings_generated.dart  stream.dart  task_notify.dart  zip.dart
linux/: CMakeLists.txt
macos/: native_zip.podspec
macos/Classes/: native_zip.c
src/: CMakeLists.txt  my_atomic_int_max.c  my_atomic_int_max.h  my_common.h  my_compress.c  my_compress.h  my_file.c  my_file.h  my_file_posix.c  my_file_windows.c  my_hashmap.c  my_hashmap.h  my_message_queue.c  my_message_queue.h  my_queue.c  my_queue.h  my_tar.c  my_task_notify.c  my_task_notify.h  my_thread.c  my_thread.h  my_threadpool.c  my_threadpool.h  my_utils.c  my_utils.h  my_zip.c  my_zip.h  my_zip_async.c  my_zip_async.h  my_zip_utils.c  my_zip_utils.h  my_zlib.c  native_zip.c  native_zip.h
windows/: CMakeLists.txt  CMakeLists.txt--ExternalProject  CMakeLists.txt--FetchContent_Declare  CMakeLists.txt--all  CMakeLists.txt--download-build
